Table vertical alignment fix

--- a/packages/table/src/block.sass
+++ b/packages/table/src/block.sass
@@ -47,7 +47,7 @@
       padding: var(--table-space-vertical) 0 var(--table-space-vertical) var(--table-space-horizontal)
       font-weight: 400
       text-align: left
-      vertical-align: middle
+      vertical-align: top
 
       &:last-child
         padding-right: var(--table-space-horizontal)
@@ -55,6 +55,7 @@
       &--
         &head
           font-size: var(--table-font-size-heading)
+          vertical-align: middle
 
   &--
     &appearance_
